/*
 Copyright (c) 2026 Ashraf Morningstar
 These are personal recreations of existing projects, developed by Ashraf Morningstar
 for learning and skill development.
 Original project concepts remain the intellectual property of their respective creators.
 Repository: https://github.com/AshrafMorningstar
*/

[package]
name = "py_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "trw_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
runtime_core = { path = "../runtime_core" }
anyhow = "1.0"
