/*
 Copyright (c) 2026 Ashraf Morningstar
 These are personal recreations of existing projects, developed by Ashraf Morningstar
 for learning and skill development.
 Original project concepts remain the intellectual property of their respective creators.
 Repository: https://github.com/AshrafMorningstar
*/

[package]
name = "runtime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wasmtime = "14.0" # or "13.0", pinning a recent version
