/*
 Copyright (c) 2026 Ashraf Morningstar
 These are personal recreations of existing projects, developed by Ashraf Morningstar
 for learning and skill development.
 Original project concepts remain the intellectual property of their respective creators.
 Repository: https://github.com/AshrafMorningstar
*/

[build-system]
requires = ["maturin>=1.2"]
build-backend = "maturin"

[project]
name = "trw_runtime"
version = "0.1.0"
description = "Python bindings for TITAN Reality Weaver runtime (prototype)"
authors = ["TITAN RW <dev@trw.example>"]
